You can retreive IMEI number from the phone.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,9 @@
         tools:context="com.bykth.confdroid.confdroid_application.MainActivity">
 
     <TextView
+            android:text="IMEI number: "
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"/>
+            android:layout_height="wrap_content" android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" android:layout_marginStart="88dp" android:layout_marginTop="131dp"
+            android:id="@+id/imeiTextView"/>
 </RelativeLayout>
