--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:layout_alignParentTop="true"
             android:layout_alignParentStart="true" android:layout_marginStart="88dp" android:layout_marginTop="131dp"
-            android:id="@+id/imeiTextView"/>
+            android:id="@+id/imeiTextView"
+    />
     <Button
             android:text="Fetch updates"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_below="@+id/imeiTextView"
-            android:layout_alignEnd="@+id/imeiTextView" android:layout_marginEnd="24dp" android:layout_marginTop="44dp"
-            android:id="@+id/button"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="66dp"
+            android:id="@+id/button" android:layout_alignTop="@+id/imeiTextView" android:layout_alignParentStart="true"
+            android:layout_marginStart="57dp"/>
+    <TextView
+            android:text="Email:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_below="@+id/nameText"
+            android:layout_alignParentStart="true" android:layout_marginStart="34dp" android:layout_marginTop="44dp"
+            android:id="@+id/emailText" tools:text="Email:"/>
+    <TextView
+            android:text="Name:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="47dp"
+            android:id="@+id/nameText" tools:text="Name:" android:layout_below="@+id/button"
+            android:layout_alignEnd="@+id/emailText"/>
 </RelativeLayout>
