--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,4 +49,9 @@
             android:id="@+id/nameText"
             android:layout_width="match_parent"
             android:layout_below="@+id/statusText" android:layout_alignParentStart="true"/>
+    <Button
+            android:text="Settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" android:layout_marginBottom="22dp" android:id="@+id/settingsButton"/>
 </RelativeLayout>
